# PytorchNode

./: .gitignore  GUIDE_创建GitHub仓库并推送.md  LICENSE  README.md  backup.bundle  check_git.py  debug_launch.py  debug_root_nodes.py  main.py  pyproject.toml  requirements.txt  setup.py  start.bat  test_roots.py  test_torch.py
.specify/memory/: constitution.md
bridge/: __init__.py  signal_bus.py  training_bridge.py
core/base/: __init__.py  connection.py  node.py  node_factory.py  node_graph.py  node_registry.py  pack.py  parameter.py  path_manager.py  pin.py
core/debug/: __init__.py  debug_manager.py
core/engine/: compiler.py  executor.py  training_pipeline.py
core/expressions/: context.py  evaluator.py  parser.py
core/nodes/: __init__.py
core/serialization/: serializer.py  subnet_restorer.py
core/undo/: command.py  undo_stack.py
core/utils/: __init__.py  validation.py
docs/: 00_项目总览.md  01_架构设计.md  02_开发路线图_完善版.md  03_核心节点系统.md  04_UI框架设计.md  05_PyTorch集成.md  06_表达式引擎.md  07_训练管线.md  08_可视化系统.md  09_插件系统.md  10_序列化系统.md  11_编码规范.md  12_API参考.md  13_文件清单.md  14_路径系统指南.md  connection_disconnect_fix.md  connection_drag_fix_summary.md  focus_chain_taskid_1770793846524.md  parameter_folder_fix_summary.md
examples/custom_training_loop/: README.md
examples/simple_mlp/: README.md
pnnefile/: test.pnne
specs/1-visual-node-editor/: plan.md  spec.md  tasks.md
tests/: test_connection_debug.py  test_connection_drag.py  test_connection_simple.py  test_node_core.py  test_node_core_simple.py
tests/test_core/: test_connection.py  test_node.py  test_node_graph.py  test_pack.py  test_parameter.py  test_path_manager.py  test_pin.py  test_signal_bus.py  test_validation.py
tests/test_engine/: test_executor.py  test_training_pipeline.py
tests/test_expressions/: __init__.py  test_conditional_params.py  test_evaluator.py  test_parser.py
tests/test_integration/: test_training_workflow.py
tests/test_nodes/: __init__.py  test_checkpoint_nodes.py  test_linear_node.py  test_loss_nodes.py  test_mnist_node.py  test_optimizer_nodes.py  test_relu_node.py
tests/test_plugins/: __init__.py
tests/test_serialization/: __init__.py  test_instance_params.py
tests/test_ui/: test_folder_comprehensive.py  test_folder_widgets_phase1.py  test_parameter_editor.py  test_parameter_folder_fix.py  test_parameter_widgets.py  test_properties_panel_folder.py  test_properties_panel_overlay.py
ui/: __init__.py  main_window.py
ui/controllers/: __init__.py  graph_controller.py  project_controller.py  training_controller.py
ui/dialogs/: debug_settings_dialog.py  parameter_editor_dialog.py
ui/graphics/: __init__.py  connection_graphics_item.py  node_graphics_item.py  node_graphics_item_v2.py  node_graphics_scene.py  node_graphics_view.py  pin_graphics_item.py
ui/mixins/: __init__.py  debug_mixin.py  dock_mixin.py  graph_mixin.py  menu_mixin.py  project_mixin.py  toolbar_mixin.py  training_mixin.py  undoredo_mixin.py
ui/panels/: __init__.py  node_palette_panel.py  properties_panel.py  visualization_panel.py
ui/visualization/: __init__.py  activation_plot_widget.py  gradient_histogram_widget.py  loss_curve_widget.py  visualization_panel.py  weight_heatmap_widget.py
ui/widgets/: __init__.py  breadcrumb_path_bar.py  expand_folder_widget.py  folder_group_box.py  (+5 more)
(+19 files in other folders)
